AWS-ALB-ASG/internet_gateway.tf
#Internet gateway 
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    "Name"  = "${var.tag}-igw"
  }
}
